[package]
name = "provision-control"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "provisionctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tonic = "0.13.1"
bollard = "0.19.0"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "process" ] }
env_logger = "0.11.8"

libprovision = { path = "../libprovision" }